--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# idea specific
+.idea/*
+!.idea/codeStyles
+*.iml
+
+# gradle specific
+.gradle
+build
