Change gradle structure

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
+buildscript {
+  apply from: "$rootDir/gradle/versions.gradle"
+}
+
 plugins {
   id "java"
   id "eclipse"
   id "idea"
-  id "org.springframework.boot" version "1.5.9.RELEASE"
-  id "com.github.ben-manes.versions" version "0.17.0"
-  id "net.ltgt.apt" version "0.13"
+  id "org.springframework.boot" version "1.5.10.RELEASE"
+  id "net.ltgt.apt" version "0.14"
 }
 
 repositories {
@@ -13,35 +16,9 @@ repositories {
   jcenter()
 }
 
-def rootDir = buildscript.sourceFile.parentFile
-def configDir = new File(rootDir, 'config')
-def checkstyleConfigDir = "$configDir/checkstyle"
-
-apply from: "$rootDir/gradle/versions.gradle"
-apply from: "$rootDir/gradle/codeQuality.gradle"
-
-group 'com.test.portal'
-version '1.0-SNAPSHOT'
-
-compileJava {
-  sourceCompatibility = "1.8"
-  targetCompatibility = "1.8"
-  options.encoding = 'UTF-8'
-}
-
-// Just a smoke test that using this option does not lead to any exception
-compileJava.options.compilerArgs = ['-Xlint:unchecked']
-
-test {
-  systemProperties = System.properties
-}
-
-sourceSets {
-  main.java.srcDir "src/main/java"
-  main.resources.srcDir "src/main/resources"
-  test.java.srcDir "src/test/java"
-  test.resources.srcDir "src/test/resources"
-}
+apply from: "gradle/gwt.gradle"
+apply from: "gradle/java.gradle"
+apply from: "gradle/codeQuality.gradle"
 
 dependencies {
   // logger
@@ -81,68 +58,6 @@ clean.doFirst {
 
 task wrapper(type: Wrapper) {
   gradleVersion = "4.5.1"
-}
-
-task compileGwt(dependsOn: classes, type: JavaExec) {
-  ext.buildDir = "${project.buildDir}/gwt"
-  ext.extraDir = "${project.buildDir}/extra"
-
-  inputs.file sourceSets.main.java.srcDirs
-  inputs.dir sourceSets.main.output.resourcesDir
-  outputs.dir buildDir
-
-  doFirst {
-    file(buildDir).mkdirs()
-  }
-
-  main = "com.google.gwt.dev.Compiler"
-
-  classpath {
-    [
-        sourceSets.main.java.srcDirs,           // Java source
-        sourceSets.main.output.resourcesDir,    // Generated resources
-        sourceSets.main.output.classesDir,      // Generated classes
-        sourceSets.main.compileClasspath,       // Deps
-    ]
-  }
-
-  if (project.hasProperty('dev')) {
-    println "Run developer mode"
-    args = [
-        "com.test.portal.Portal",
-        "-war", buildDir,
-        "-logLevel", "INFO",
-        "-localWorkers", "4",
-        "-compileReport",
-        "-extra", extraDir,
-        "-style", "OBF",
-        "-optimize", "9" // 0=none, 9=max
-    ]
-  } else {
-    println "Run production mode"
-    args = [
-        "com.test.portal.Portal",
-        "-war", buildDir,
-        "-logLevel", "INFO",
-        "-localWorkers", "4",
-        "-compileReport",
-        "-extra", extraDir,
-        "-style", "OBF",
-        "-optimize", "9" // 0=none, 9=max
-    ]
-  }
-
-  maxHeapSize = "4G"
-}
-
-compileJava.dependsOn(processResources)
-
-jar.dependsOn compileGwt
-
-jar {
-  into("static") {
-    from compileGwt.buildDir
-  }
 }
 
 eclipse {
