--- a/gradle/codeQuality.gradle
+++ b/gradle/codeQuality.gradle
@@ -1,41 +1,30 @@
-def configDir = new File(rootDir, 'config')
+def configDir = new File("$rootDir", 'config')
 def checkstyleConfigDir = "$configDir/checkstyle"
 
-// configure static code style plugins
 apply plugin: 'checkstyle'
+apply plugin: 'findbugs'
+//apply plugin: 'pmd'
+apply plugin: "jacoco"
+
 checkstyle {
+  ignoreFailures = false
   configFile = new File(checkstyleConfigDir, "checkstyle.xml")
   configProperties.checkstyleConfigDir = checkstyleConfigDir
-  ignoreFailures = false
-  toolVersion = "8.1"
+  toolVersion "8.8"
 }
 
-task checkstyleHtml {
-  doLast {
-    try {
-      String xmlReportFilePath = checkstyleMain.reports.xml.destination.parent;
-      File xmlReportFile = new File(xmlReportFilePath, "main.xml")
-      if (!xmlReportFile.exists()) {
-        return;
-      }
-
-      ant.xslt(in: checkstyleMain.reports.xml.destination,
-          style: file("$checkstyleConfigDir/styles.xsl"),
-          out: new File(xmlReportFilePath, 'main.html'))
-    }
-    catch (Exception e) {
-      throw new RuntimeException(e)
-    }
-  }
+checkstyleMain {
+  source = sourceSets.main.allSource
 }
 
-checkstyleMain.finalizedBy checkstyleHtml
+checkstyleTest {
+  source = sourceSets.test.allSource
+}
 
-// performs quality checks on your project's Java source files using FindBugs
-apply plugin: 'findbugs'
 findbugs {
-  ignoreFailures = true
-  sourceSets = [sourceSets.main]
+  ignoreFailures = false
+  toolVersion = "3.0.1"
+  sourceSets = [sourceSets.main, sourceSets.test]
   reportsDir = file("$project.buildDir/findbugsReports")
   effort = "max"
   reportLevel = "high"
@@ -48,31 +37,43 @@ tasks.withType(FindBugs) {
   }
 }
 
-// performs quality checks on your project's source files using JDepend.
-//apply plugin: 'jdepend'
+jacocoTestReport {
+  reports {
+    xml.enabled false
+    csv.enabled false
+    html.destination "${buildDir}/jacocoHtml"
+  }
+}
 
-// performs quality checks on your project's Java source files using PMD
-//apply plugin: 'pmd'
+task checkstyleHtml {
+  doLast {
+    try {
+      String xmlReportFilePath = checkstyleMain.reports.xml.destination.parent;
+      File xmlReportFile = new File(xmlReportFilePath, "main.xml")
+      if (!xmlReportFile.exists()) {
+        return;
+      }
+      ant.xslt(in: checkstyleMain.reports.xml.destination, style: file("$checkstyleConfigDir/styles.xsl"), out: new File(xmlReportFilePath, 'main.html'))
+    }
+    catch (Exception e) {
+      throw new RuntimeException(e)
+    }
+  }
+}
 
-//apply plugin: "jacoco" // test coverage plugin
-//jacocoTestReport {
-//  reports {
-//    xml.enabled false
-//    csv.enabled false
-//    html.destination "${buildDir}/jacocoHtml"
-//  }
+checkstyleMain.finalizedBy checkstyleHtml
+checkstyleTest.finalizedBy checkstyleHtml
+
+//pmd {
+//  ignoreFailures = true
+//  sourceSets = [sourceSets.main]
+//  reportsDir = file("$project.buildDir/pmdReports")
+//  ruleSets = ["basic", "braces", "strings"]
 //}
-
-//tasks.withType(FindBugs) {
+//
+//tasks.withType(Pmd) {
 //  reports {
 //    xml.enabled = false
 //    html.enabled = true
-//  }
-//}
-
-//tasks.withType(JDepend) {
-//  reports {
-//    xml.enabled false
-//    text.enabled true
 //  }
 //}
